--- a/contact.css
+++ b/contact.css
@@ -12,7 +12,7 @@ body{
   }
   
   @font-face{
-    font-family: "Lovely Home";
+    font-family: "Computer Modern Sans";
     src:local('Lovely Home'), 
     url("Image/LovelyHome-9aBZ.ttf") format('truetype');
 
@@ -21,16 +21,16 @@ body{
 .brand-name ,.navbar-light .navbar-brand{
       /* font-family: "Brush Script MT"; */
       /* margin-bottom: 3px; */
-      font-family: "Lovely Home";
+      font-family: "Computer Modern Sans";
       font-size: 50px;
-      font-weight: bold;
+     
       color: #351458;
   }
   @media only screen and (max-width : 764px){
       .brand-name ,.navbar-light .navbar-brand{
-      font-family: "Lovely Home";
+      font-family: "Computer Modern Sans";
       font-size: 40px;
-      font-weight: bold;
+      
       color: #351458;
   }
 }
@@ -65,7 +65,7 @@ body{
 
   .context{
     text-align: center;
-    padding-top: 20px;
+    padding-top: 0px;
 }
 
   h1{
@@ -124,7 +124,7 @@ body{
     font-size: 30px;
     color:white;
     background-color: #6c63ff;
-    padding: 10px 30px 10px;
+    padding: 10px 10px 10px;
     margin-left: 12%;
     margin-right: 12%;
     border-radius: 10px;
@@ -191,7 +191,7 @@ body{
   }
 
   footer{
-    padding-top: 2%;
+    padding-top: 1%;
     color: #868e96;
     text-align: center;
   }
