--- a/style.css
+++ b/style.css
@@ -294,6 +294,9 @@ span.wave {
   .Features-paragraph{
       margin-top : 8px;
       margin-bottom: 8px;
+      padding-left :-10px;
+      text-align : justify;
+
   }
 
   @media only screen and (max-width : 764px){
